syntax = "proto3";

package detector;

import "google/protobuf/timestamp.proto";

message Detector {
    string id = 1;
    string namme = 2;
    string alias = 3;
    string detector_package_id = 4;
    bool is_active = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
}

message DetectorResponse {
    Detector detector = 1;
}

